WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120396
Fix unused variable warning on WK2 in PageOverlay.h
https://bugs.webkit.org/show_bug.cgi?id=120396
Summary
Fix unused variable warning on WK2 in PageOverlay.h
Gábor Ábrahám
Reported
2013-08-28 01:40:12 PDT
Created
attachment 209854
[details]
proposed patch Fix unused variable warning on WK2 in PageOverlay.h file after
r153404
.
Attachments
proposed patch
(2.14 KB, patch)
2013-08-28 01:40 PDT
,
Gábor Ábrahám
no flags
Details
Formatted Diff
Diff
proposed patch v2
(1.75 KB, patch)
2013-08-28 01:45 PDT
,
Gábor Ábrahám
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2013-08-28 01:42:04 PDT
Attachment 209854
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit2/WebProcess/WebPage/PageOverlay.h']" exit_code: 1 Source/WebKit2/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Gábor Ábrahám
Comment 2
2013-08-28 01:45:05 PDT
Created
attachment 209856
[details]
proposed patch v2
WebKit Commit Bot
Comment 3
2013-08-28 05:51:13 PDT
Comment on
attachment 209856
[details]
proposed patch v2 Clearing flags on attachment: 209856 Committed
r154737
: <
http://trac.webkit.org/changeset/154737
>
WebKit Commit Bot
Comment 4
2013-08-28 05:51:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug