Fix unused variable warning. https://bugs.webkit.org/show_bug.cgi?id=120396

Patch by Ábrahám Gábor <abrhm@inf.u-szeged.hu> on 2013-08-28
Reviewed by Allan Sandfeld Jensen.

Fix unused variable compiler warning in PageOverlay.h

* WebProcess/WebPage/PageOverlay.h:
(WebKit::PageOverlay::Client::copyAccessibilityAttributeValue):
(WebKit::PageOverlay::Client::copyAccessibilityAttributeNames):

Canonical link: https://commits.webkit.org/138377@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154737 268f45cc-cd09-0410-ab3c-d52691b4dbfc